--- a/experiments/bash/lighttpd/lighttpd.conf
+++ b/experiments/bash/lighttpd/lighttpd.conf
@@ -2,6 +2,12 @@ server.document-root = "/Users/andries/Development/Git/Grace London/simple-live-
 
 server.port = 8888
 
+setenv.add-response-header += (
+    "Expires" => "0",
+    "Cache-Control" => "no-store, no-cache, must-revalidate",
+    "Pragma" => "no-cache"
+)
+
 mimetype.assign = (
   ".html" => "text/html", 
   ".txt" => "text/plain",
